--- a/sensor_data/room_change_detect_2.ipynb
+++ b/sensor_data/room_change_detect_2.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "a1e8ffa2-4bce-4a6b-933b-badc9075988f",
    "metadata": {},
    "outputs": [],
@@ -316,12 +316,14 @@
     "# 3. Simplify 'Value' to boolean for easier processing\n",
     "motion_df['IsMotion'] = motion_df['Value'] == 'ON'\n",
     "# 4. create a new column end time\n",
-    "motion_df['end_time'] = motion_df['Timestamp']\n"
+    "motion_df['end_time'] = motion_df['Timestamp']\n",
+    "# 5. create a new column with SensorID + Attribute1\n",
+    "motion_df['unique_id'] = motion_df['SensorID'] + '_' + motion_df['Attribute1']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "885b6686-7268-4e9d-ab2d-71ef44aba2f2",
    "metadata": {},
    "outputs": [
@@ -346,104 +348,105 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Room</th>\n",
-       "      <th>Start Time</th>\n",
-       "      <th>End Time</th>\n",
+       "      <th>unique_id</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>end_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Kitchen</td>\n",
+       "      <td>M007_Kitchen</td>\n",
        "      <td>2014-04-04 21:00:44.941567</td>\n",
-       "      <td>2014-04-04 21:00:58.212312</td>\n",
+       "      <td>2014-04-04 21:00:56.700078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>DiningRoom</td>\n",
+       "      <td>M005_DiningRoom</td>\n",
        "      <td>2014-04-04 21:00:58.212312</td>\n",
-       "      <td>2014-04-04 21:01:00.626681</td>\n",
+       "      <td>2014-04-04 21:00:58.212312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>LivingRoom</td>\n",
+       "      <td>M004_LivingRoom</td>\n",
        "      <td>2014-04-04 21:04:51.069809</td>\n",
-       "      <td>2014-04-04 21:09:51.214350</td>\n",
+       "      <td>2014-04-04 21:09:47.472309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>DiningRoom</td>\n",
+       "      <td>M005_DiningRoom</td>\n",
        "      <td>2014-04-04 21:09:55.781471</td>\n",
-       "      <td>2014-04-04 21:10:08.622916</td>\n",
+       "      <td>2014-04-04 21:10:05.070300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>WorkArea</td>\n",
+       "      <td>M015_WorkArea</td>\n",
        "      <td>2014-04-04 21:10:41.732679</td>\n",
-       "      <td>2014-04-04 21:10:42.850097</td>\n",
+       "      <td>2014-04-04 21:10:41.732679</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>DiningRoom</td>\n",
+       "      <td>M005_DiningRoom</td>\n",
        "      <td>2014-04-04 21:11:20.800523</td>\n",
-       "      <td>2014-04-04 21:11:51.780999</td>\n",
+       "      <td>2014-04-04 21:11:49.701719</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Kitchen</td>\n",
+       "      <td>M007_Kitchen</td>\n",
        "      <td>2014-04-04 21:12:18.611104</td>\n",
-       "      <td>2014-04-04 21:12:19.333686</td>\n",
+       "      <td>2014-04-04 21:12:18.611104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>DiningRoom</td>\n",
+       "      <td>M005_DiningRoom</td>\n",
        "      <td>2014-04-04 21:12:19.333686</td>\n",
-       "      <td>2014-04-04 21:12:21.017878</td>\n",
+       "      <td>2014-04-04 21:12:19.333686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>LivingRoom</td>\n",
+       "      <td>M004_LivingRoom</td>\n",
        "      <td>2014-04-04 21:13:02.273181</td>\n",
-       "      <td>2014-04-04 21:13:51.168442</td>\n",
+       "      <td>2014-04-04 21:13:49.292463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>DiningRoom</td>\n",
+       "      <td>M005_DiningRoom</td>\n",
        "      <td>2014-04-04 21:14:56.440836</td>\n",
-       "      <td>2014-04-04 21:14:58.120701</td>\n",
+       "      <td>2014-04-04 21:14:56.440836</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Room                 Start Time                   End Time\n",
-       "0     Kitchen 2014-04-04 21:00:44.941567 2014-04-04 21:00:58.212312\n",
-       "1  DiningRoom 2014-04-04 21:00:58.212312 2014-04-04 21:01:00.626681\n",
-       "2  LivingRoom 2014-04-04 21:04:51.069809 2014-04-04 21:09:51.214350\n",
-       "3  DiningRoom 2014-04-04 21:09:55.781471 2014-04-04 21:10:08.622916\n",
-       "4    WorkArea 2014-04-04 21:10:41.732679 2014-04-04 21:10:42.850097\n",
-       "5  DiningRoom 2014-04-04 21:11:20.800523 2014-04-04 21:11:51.780999\n",
-       "6     Kitchen 2014-04-04 21:12:18.611104 2014-04-04 21:12:19.333686\n",
-       "7  DiningRoom 2014-04-04 21:12:19.333686 2014-04-04 21:12:21.017878\n",
-       "8  LivingRoom 2014-04-04 21:13:02.273181 2014-04-04 21:13:51.168442\n",
-       "9  DiningRoom 2014-04-04 21:14:56.440836 2014-04-04 21:14:58.120701"
+       "         unique_id                  Timestamp                   end_time\n",
+       "0     M007_Kitchen 2014-04-04 21:00:44.941567 2014-04-04 21:00:56.700078\n",
+       "1  M005_DiningRoom 2014-04-04 21:00:58.212312 2014-04-04 21:00:58.212312\n",
+       "2  M004_LivingRoom 2014-04-04 21:04:51.069809 2014-04-04 21:09:47.472309\n",
+       "3  M005_DiningRoom 2014-04-04 21:09:55.781471 2014-04-04 21:10:05.070300\n",
+       "4    M015_WorkArea 2014-04-04 21:10:41.732679 2014-04-04 21:10:41.732679\n",
+       "5  M005_DiningRoom 2014-04-04 21:11:20.800523 2014-04-04 21:11:49.701719\n",
+       "6     M007_Kitchen 2014-04-04 21:12:18.611104 2014-04-04 21:12:18.611104\n",
+       "7  M005_DiningRoom 2014-04-04 21:12:19.333686 2014-04-04 21:12:19.333686\n",
+       "8  M004_LivingRoom 2014-04-04 21:13:02.273181 2014-04-04 21:13:49.292463\n",
+       "9  M005_DiningRoom 2014-04-04 21:14:56.440836 2014-04-04 21:14:56.440836"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Assign group IDs when the room name changes\n",
-    "motion_df['GroupID'] = (motion_df['Attribute1'] != motion_df['Attribute1'].shift()).cumsum()\n",
+    "#motion_df['GroupID'] = (motion_df['Attribute1'] != motion_df['Attribute1'].shift()).cumsum()\n",
+    "motion_df['GroupID'] = (motion_df['unique_id'] != motion_df['unique_id'].shift()).cumsum()\n",
     "# motion_df.head(20)\n",
     "# Group by GroupID and extract the first start time and last end time for each group\n",
-    "result_df = stay_periods_df.groupby('GroupID').agg({\n",
-    "    'Room': 'first',\n",
-    "    'Start Time': 'first',\n",
-    "    'End Time': 'last'\n",
+    "result_df = motion_df.groupby('GroupID').agg({\n",
+    "    'unique_id': 'first',\n",
+    "    'Timestamp': 'first',\n",
+    "    'end_time': 'last'\n",
     "}).reset_index(drop=True)\n",
     "\n",
     "result_df.head(10)"
